@@ -1,3 +1,8 @@
+2004-09-29 Bart Hakvoort  <gparted@users.sf.net>
+
+	* src/VBox_VisualDisk.cc,
+	  src/Win_GParted.cc: minor i18n related tweaks.
+
 2004-09-29  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.
